# BB-8-ROS

./: .gitignore  CMakeLists_backup.txt
bb8_bluetooth_positioning/: CMakeLists.txt  package.xml
bb8_bluetooth_positioning/include/bb8_bluetooth_positioning/: Bluetooth.h
bb8_bluetooth_positioning/src/: Bluetooth.cpp
bb8_communications/: CMakeLists.txt  package.xml
bb8_communications/include/bb8_communications/: i2c-dev.h  i2c.h
bb8_communications/src/: i2c.cpp
bb8_control/include/bb8_control/: sixaxis.h
bb8_control/src/: sixaxis.cpp
bb8_movement/include/bb8_movement/: Motor.h  Move.h
bb8_movement/src/: Motor.cpp  Move.cpp  Servo.cpp
bb8_sensor/: package.xml
bb8_sensor/include/bb8_sensor/9DOF/: Accel.h  Mag.h
bb8_sensor/include/bb8_sensor/Filter/: Fusion.h
bb8_sensor/src/DOF9/: Adafruit_Sensor.cpp  Gyro.cpp
bb8_sensor/src/Filter/: Fusion.cpp
bb_8_description/robots/: bb_8.gazebo.sdf  bb_8.sdf  bb_8.urdf  bb_8.xacro
bb_8_gazebo/: CMakeLists.txt
bb_8_gazebo/include/bb_8_gazebo/: gazebo_ros_utils.h
bb_8_gazebo/launch/: main.launch
bb_8_gazebo/launch/include/: bb_8.launch.sdf.xml  head_camera.launch.xml  navigation.launch.xml
bb_8_gazebo/src/: gazebo_bb_8_controller.cpp  gazebo_ros_utils.cpp
src/bb8_communications/src/: i2c.cpp
src/bb8_control/: CMakeLists.txt
src/bb8_control/include/bb8_control/: sixaxis.h
src/bb8_control/launch/: bb8_control.launch
src/bb8_control/src/: sixaxis.cpp
src/bb8_movement/: CMakeLists.txt
src/bb8_movement/include/bb8_movement/: Motor.h  Move.h  Servo.h
src/bb8_movement/launch/: bb8_movement.launch
src/bb8_movement/src/: Motor.cpp  Move.cpp
src/bb8_sensor/: CMakeLists.txt
src/bb8_sensor/include/bb8_sensor/: DOF9.h
src/bb8_sensor/include/bb8_sensor/9DOF/: DOF9_sensor.h  Gyro.h
src/bb8_sensor/src/: DOF9.cpp
src/bb8_sensor/src/DOF9/: Accel.cpp  Mag.cpp
