<?xml version="1.0"?>
<package>
  <name>bb8_sensor</name>
  <version>0.0.1</version>
  <description>The bb8_sensor package</description>

  <maintainer email="kareembenslimane@gmail.com">Karim Benslimane</maintainer>
  <maintainer email="renzoscholman@gmail.com">Renzo Scholman</maintainer>
  <license>MIT</license>
  <url type="website">http://www.bb-8.nl</url>
  <author email="kareembenslimane@gmail.com">Karim Benslimane</author>
  <author email="renzoscholman@gmail.com">Renzo Scholman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>bb8_communications</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
